--- a/frontend/src/app/components/partials/header/header.component.css
+++ b/frontend/src/app/components/partials/header/header.component.css
@@ -1,22 +1,78 @@
 header {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding: 1rem;
+    position: sticky;
+    width: 100vw;
+    top: 0;
 
-    nav ul {
-        display: flex;
-        align-items: center;
-        column-gap: 1em;
+    display: flex;
+    justify-content: center;
+
+    background: linear-gradient(60deg, var(--primary) 70%, var(--accent) 100%);
+    filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
+    color: white;
+
+    #title {
+        padding: .4em;
+        color: white;
+    }
+
+    nav {
+        flex: 1;
+
+        ul {
+            height: 100%;
+            display: flex;
+
+            li {
+                height: 100%;
+                a {
+                    position: relative;
+                    display: flex;
+                    justify-content: center;
+                    align-items: center;
+                    height: 100%;
+                    padding: 0 1em;
+                    color: white;
+                    transition: ease-in .1s;
+
+                    &.active {
+                        .bottomLine {
+                            position: absolute;
+                            bottom: 0;
+                            width: 100%;
+                            height: 4px;
+                            background-color: var(--accent);;
+                        }
+                    }
+
+                    &:hover, &:focus {
+                        text-decoration: none;
+                        background-color: rgba(255, 255, 255, 0.1);
+                    }
+                }
+            }
+        }
     }
 
     .user {
         display: flex;
         flex-direction: column;
-        align-items: flex-end;
-        row-gap: 0.5em;
+        justify-content: center;
+        padding-right: 1em;
+
+        span {
+            text-align: end;
+            color: white;
+        }
+        button {
+            border: none;
+            padding: .2em;
+            background: none;
+            color: white;
+
+            &:hover{
+                text-decoration: underline;
+            }
+        }
     }
 
-    /*DEBUG*/
-    background-color: blue;
 }
