--- a/frontend/src/app/components/login/login.component.html
+++ b/frontend/src/app/components/login/login.component.html
@@ -15,7 +15,7 @@
 
         <div class="formControl">
             <label for="rememberMe">Se souvenir de moi</label>
-            <input type="checkbox" name="rememberMe" id="rememberMe" formControlName="rememberMe">
+            <input type="checkbox" name="rememberMe" formControlName="rememberMe">
         </div>
 
         <button (click)="onSubmit()">Se connecter</button>
