--- a/frontend/src/app/components/partials/header/header.component.html
+++ b/frontend/src/app/components/partials/header/header.component.html
@@ -1,5 +1,8 @@
 <header>
-    <h3 id="title">ParCours</h3>
+    <div class="mobileFirstLine">
+        <h3 id="title">ParCours</h3>
+        <svg id="accountIcon" xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px" fill="#FFFFFF"><path d="M480.02-496q-79.6 0-130.81-51.71Q298-599.42 298-678.36q0-78.95 51.05-130.13 51.05-51.18 130.66-51.18 79.6 0 131.28 51.07 51.68 51.07 51.68 130.74 0 78.44-51.52 130.15Q559.63-496 480.02-496ZM130-221.33v-24.07q0-44.74 22.77-79.41 22.76-34.66 60.9-52.19 67.33-32.67 133.34-48.33 66-15.67 132.65-15.67 68.65 0 133.83 16.33 65.18 16.34 132.18 47.34 38.98 16.75 61.99 51.3 23.01 34.56 23.01 80.63v24.07q0 45.06-31.02 75.53-31.01 30.47-75.65 30.47H236q-44.37 0-75.18-30.47Q130-176.27 130-221.33Z"/></svg>
+    </div>
     @if(user){
         <nav>
             <ul>
@@ -12,6 +15,12 @@
                 <li>
                     <a routerLink="sessions" routerLinkActive="active">
                         Sessions
+                        <div class="bottomLine"></div>
+                    </a>
+                </li>
+                <li>
+                    <a routerLink="homeworks" routerLinkActive="active">
+                        Devoirs
                         <div class="bottomLine"></div>
                     </a>
                 </li>
