--- a/frontend/src/app/components/partials/header/header.component.html
+++ b/frontend/src/app/components/partials/header/header.component.html
@@ -7,7 +7,7 @@
         <nav>
             <ul>
                 <li>
-                    <a routerLink="" routerLinkActive="active">
+                    <a routerLink="" routerLinkActive="active" [routerLinkActiveOptions]="{exact: true}">
                         Dashboard
                         <div class="bottomLine"></div>
                     </a>
